updates page fixed

--- a/events.html
+++ b/events.html
@@ -313,45 +313,45 @@
 
 <body>
   <!-- Navbar -->
-  <header role="banner">
-    <nav class="nav">
-      <a class="brand" href="index.html">
-        <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
-        <div>
-          <div class="title">E-Cell IGDTUW</div>
-          <div class="subtitle">Innovate • Create • Grow</div>
-        </div>
-      </a>
-      <div class="links">
-        <a href="index.html" class="nav-text">About</a>
-        <a href="events.html" class="nav-text">Events</a>
-        <a href="blogs.html" class="nav-text">Blogs</a>
-        <a href="gallery.html" class="nav-text">Gallery</a>
-        <a href="updates.html" class="nav-text">Updates</a>
-        <a href="our-team.html" class="nav-text">Team</a>
-        <a class="cta" href="contact.html">Contact Us</a>
+<header role="banner">
+  <nav class="nav">
+    <a class="brand" href="index.html">
+      <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+      <div>
+        <div class="title">E-Cell IGDTUW</div>
+        <div class="subtitle">Innovate • Create • Grow</div>
       </div>
+    </a>
+    <div class="links">
+      <a href="index.html" class="nav-text">About</a>
+      <a href="events.html" class="nav-text">Events</a>
+      <a href="blogs.html" class="nav-text">Blogs</a>
+      <a href="gallery.html" class="nav-text">Gallery</a>
+      <a href="updates.html" class="nav-text">Updates</a>
+      <a href="our-team.html" class="nav-text">Team</a>
+      <a class="cta" href="contact.html">Contact Us</a>
+    </div>
 
-      <!-- ✅ Hamburger -->
-      <button class="menu-btn" id="menuBtn" aria-label="Open menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-    </nav>
-  </header>
+    <!-- Hamburger -->
+    <button class="menu-btn" id="menuBtn" aria-label="Open menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </nav>
+</header>
 
-  <!-- ✅ Drawer -->
-  <div class="drawer" id="drawer">
-    <span class="close" id="closeDrawer">&times;</span>
-    <a href="index.html">About</a>
-    <a href="events.html">Events</a>
-    <a href="blogs.html">Blogs</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="updates.html">Updates</a>
-    <a href="our-team.html">Team</a>
-    <a href="contact.html">Contact Us</a>
-  </div>
+<!-- Drawer -->
+<div class="drawer" id="drawer">
+  <span class="close" id="closeDrawer">&times;</span>
+  <a href="index.html">About</a>
+  <a href="events.html">Events</a>
+  <a href="blogs.html">Blogs</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="updates.html">Updates</a>
+  <a href="our-team.html">Team</a>
+  <a href="contact.html">Contact Us</a>
+</div>
 
   <!-- Events Section (unchanged) -->
   <div class="events-container">
