--- a/events.html
+++ b/events.html
@@ -362,8 +362,10 @@
       <div class="event-card" onclick="openModal('modal-orientation')">
         <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" class="event-thumb" alt="Orientation">
         <div class="event-info">
+          <div id="orientation-details" class="orientation-section">
           <h2>Orientation’25</h2>
           <p>Kicking off the new tenure with 100+ enthusiastic attendees</p>
+          </div>
         </div>
       </div>
 
@@ -394,9 +396,9 @@
       <span class="close-btn" onclick="closeModal('modal-drishti')">&times;</span>
       <h2>E-Cell x Drishti IAS</h2>
       <div class="modal-images">
-        <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="">
-        <img src="https://i.postimg.cc/dQ2MG2p9/IMG-6012.avif" alt="">
-        <img src="https://i.postimg.cc/dQ2MG2p9/IMG-6012.avif" alt="">
+        <img src="images/drishtiias/1000074428.jpg" alt="">
+        <img src="images/drishtiias/1000074424.jpg" alt="">
+        <img src="images/drishtiias/1000074475.jpg" alt="">
       </div>
       <p>E-Cell x Drishti IAS: From Engineering Dreams to Cracking Civil Services 
 
@@ -454,11 +456,12 @@ All Participants: Certificates of participation
   <div id="modal-orientation" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('modal-orientation')">&times;</span>
+      <div id="orientation-details" class="marquee-section"></div>
       <h2>Orientation’25</h2>
       <div class="modal-images">
-        <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="">
-        <img src="https://i.postimg.cc/dQ2MG2p9/IMG-6012.avif" alt="">
-        <img src="https://i.postimg.cc/dQ2MG2p9/IMG-6012.avif" alt="">
+        <img src="images/drishtiias/1000074424.jpg" alt="">
+        <img src="images/drishtiias/1000074428.jpg" alt="">
+        <img src="images/drishtiias/1000074475.jpg" alt="">
 
       </div>
       <p>The Orientation Session of E-Cell IGDTUW was held on 28th August, marking the beginning of an exciting new tenure of entrepreneurial activities on campus. With 100+ enthusiastic attendees, the event provided students with an opportunity to immerse themselves in the culture of innovation, leadership, and collaboration that E-Cell stands for. The session aimed to familiarize students with the Cell’s vision, showcase the opportunities available, and inspire them to step into the world of entrepreneurship.
