--- a/index.html
+++ b/index.html
@@ -120,15 +120,17 @@
           </p>
 
           <div class="hero-buttons mt-8 flex justify-center space-x-6">
-            <a class="btn primary px-6 py-3 rounded-full bg-pink-500 text-white font-bold hover:bg-pink-600 transition"
-              href="events.html">
-              Explore Events
-            </a>
-            <a class="btn px-6 py-3 rounded-full border border-white text-white font-bold hover:bg-white hover:text-black transition"
-              href="#footer">
-              Connect with us
-            </a>
-          </div>
+  <a class="btn px-6 py-3 rounded-full border border-white text-white font-bold hover:bg-white hover:text-black transition"
+    href="events.html">
+    Explore Events
+  </a>
+  <a class="btn px-6 py-3 rounded-full border border-white text-white font-bold hover:bg-white hover:text-black transition"
+    href="https://chat.whatsapp.com/your-group-invite-code" 
+    target="_blank" 
+    rel="noopener noreferrer">
+    Connect with us
+  </a>
+</div>
         </div>
       </section>
 
@@ -161,104 +163,6 @@
 
 
 
-
-
-  <!-- <div class="head-nav">
-        <div class="logo">
-          <img id="logo" src="logo.jpeg" />
-          <div id="logo-text">E-Cell</div>
-        </div>
-        <nav>
-          <span id="navbar-overlay">
-            <div class="container-nav">
-              <a class="navhead about-us" href="index.html">About Us</a>
-              <a class="navhead our-team" href="our-team.html">Our Team</a>
-              <a class="navhead past-events" href="events.html">Our Events</a>
-              <a class="navhead blogs" href="blogs.html">Blogs</a>
-              <a class="navhead gallery" href="gallery.html">Gallery</a>
-              <a class="navhead updates" href="updates.html">Updates</a>
-
-              <div class="contact-us">
-                <button
-                  class="button-contact"
-                  onclick="location.href='contact.html'"
-                >
-                  Contact Us
-                </button>
-              </div>
-            </div>
-          </span>
-        </nav> -->
-  <!-- HAMBURGER (only shows on mobile) -->
-  <!-- <div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div> -->
-
-  <!-- SLIDING MENU (hidden initially) -->
-  <!-- <div id="mobileMenu" class="mobile-menu"> 
-    Back home
-    <a href="nav.html" class="back-to-home">Home</a>
-
-    Links
-    <a class="navhead" href="nav.html">About Us</a>
-    <a class="navhead" href="our-team.html">Our Team</a>
-    <a class="navhead" href="events.html">Our Events</a>
-    <a class="navhead" href="blogs.html">Blogs</a>
-    <a class="navhead" href="gallery.html">Gallery</a>
-    <a class="navhead" href="contact.html">Contact Us</a>
-    <a class="navhead" href="updates.html">Updates</a>
-  </div> -->
-
-  <!-- </div> -->
-  <!-- </header> -->
-
-  <!-- Main Content -->
-  <!-- <div id="main-content"> -->
-
-  <!-- Hero Section -->
-  <!-- <section id="hero" class="relative flex items-start justify-center min-h-screen overflow-hidden bg-[#1a1a1a] pt-24"> -->
-  <!-- Background Video -->
-  <!-- <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover opacity-60 z-0"
-        poster="/images/hero-fallback.jpg">
-        <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4"> -->
-  <!-- Fallback image if video tag is not supported -->
-  <!-- <img src="/images/hero-fallback.jpg" alt="Background" class="w-full h-full object-cover">
-      </video> -->
-
-  <!-- Gradient Background -->
-  <!-- <div id="gradient-bg" class="absolute inset-0 z-0 transition-all duration-200"></div> -->
-
-  <!-- Centered Content -->
-  <!-- <div class="relative z-10 flex flex-col items-center text-center px-6 max-w-4xl"> -->
-  <!-- Main SVG Heading -->
-  <!-- <svg viewBox="0 0 1800 200" class="w-full mb-6">
-          <text x="50%" y="50%" text-anchor="middle" class="hero-svg-text" fill="none" stroke="white" stroke-width="2"
-            font-size="8vw" font-family="Rye, serif">
-            Welcome to E-Cell IGDTUW
-          </text>
-        </svg> -->
-
-  <!-- Subheading / Paragraph -->
-  <!-- <p class="sub-text mt-6 text-gray-300 text-xl md:text-2xl lg:text-3xl font-medium leading-relaxed font-sans">
-          We are the Entrepreneurship Cell of Indira Gandhi Delhi Technical University for Women.
-          Our mission is to foster a culture of innovation and entrepreneurship among students.
-          We believe in turning ideas into reality, empowering young minds to become future leaders and changemakers.
-        </p> -->
-
-  <!-- Buttons -->
-  <!-- <div class="mt-8 flex justify-center space-x-6 gsap-fade-in">
-          <a href="#contact"
-            class="px-8 py-4 rounded-full bg-slate-200 text-slate-900 font-semibold hover:bg-slate-50 transition-colors">
-            Contact Us
-          </a>
-          <a href="#team"
-            class="px-8 py-4 rounded-full border border-slate-200 text-slate-200 font-semibold hover:bg-slate-200 hover:text-slate-900 transition-colors">
-            Be a Part
-          </a>
-        </div>
-      </div> -->
   </section>
 
   <!-- Ribbon Section -->
@@ -316,45 +220,45 @@
   <!-- Left Column -->
   <div class="sponsor-column left-column">
     <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
       <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
     </div>
   </div>
 
   <!-- Middle Column -->
   <div class="sponsor-column middle-column">
     <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
       <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
     </div>
   </div>
 
   <!-- Right Column -->
   <div class="sponsor-column right-column">
     <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
       <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 8"></div>
     </div>
   </div>
 </div>
@@ -365,7 +269,7 @@
         <!-- Section Heading -->
         <div class="text-center mb-16">
           <h2 class="text-4xl md:text-5xl font-bold tracking-wide mb-4">
-            Our <span class="text-purple-400">Events</span>
+            Our <span class="text-purple-400">Past Events</span>
           </h2>
           <p class="text-gray-400 text-lg md:text-xl max-w-2xl mx-auto">
             From idea-stage hackathons to inspiring guest talks — our events bring together
@@ -380,11 +284,14 @@
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
             <img src="ideastorm.png" alt="Event 1" class="w-full h-48 object-cover">
             <div class="p-6">
-              <h3 class="text-2xl font-semibold mb-3">Hackathon 2025</h3>
+              <h3 class="text-2xl font-semibold mb-3">Orientation’25</h3>
               <p class="text-gray-400 text-sm mb-4">
-                A 48-hour innovation sprint where brilliant minds came together to solve real-world problems.
+                Kicking off the new tenure with 100+ enthusiastic attendees.
               </p>
-              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+              <a href="events.html#orientation-details" 
+   class="text-purple-400 font-semibold hover:underline">
+   Read More →
+</a>
             </div>
           </div>
 
@@ -393,9 +300,9 @@
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
             <img src="case-conq.png" alt="Event 2" class="w-full h-48 object-cover">
             <div class="p-6">
-              <h3 class="text-2xl font-semibold mb-3">Entrepreneurship Bootcamp</h3>
+              <h3 class="text-2xl font-semibold mb-3">The Case Conqueror</h3>
               <p class="text-gray-400 text-sm mb-4">
-                A week-long bootcamp packed with workshops, mentoring sessions, and startup pitch practice.
+                Nationwide Case Study Challenge powered by Unstop.
               </p>
               <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
             </div>
@@ -404,7 +311,7 @@
           <!-- Event Card -->
           <div
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-            <img src="drishti.png" alt="Event 3" class="w-full h-48 object-cover">
+            <img src="images/drishtiias/1000074424.jpg" alt="Event 3" class="w-full h-48 object-cover">
             <div class="p-6">
               <h3 class="text-2xl font-semibold mb-3">Guest Lecture Series</h3>
               <p class="text-gray-400 text-sm mb-4">
@@ -417,7 +324,7 @@
       </div>
     </section>
     <!-- Footer Section -->
-<footer class="bg-purple-400 text-gray-700 py-12 relative">
+<footer class="bg-gray-900 text-gray-500 py-12 relative">
   <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
 
     <!-- Location with Map -->
