--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Cell IGDTUW</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/png" href="logo.jpeg">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
