--- a/index.html
+++ b/index.html
@@ -255,11 +255,13 @@
       <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
       <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
       <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
       <!-- duplicate for seamless scroll -->
       <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
       <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
       <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
       <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
     </div>
   </div>
 
@@ -270,11 +272,13 @@
       <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
       <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
       <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
       <!-- duplicate for seamless scroll -->
       <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 5"></div>
       <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
       <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
       <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
     </div>
   </div>
 
@@ -283,13 +287,17 @@
     <div class="sponsor-column-inner">
       <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
       <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
       <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
       <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
+     
       <!-- duplicate for seamless scroll -->
       <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
       <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
       <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
       <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 8"></div>
+      
     </div>
   </div>
 </div>
@@ -315,11 +323,11 @@
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
             <img src="ideastorm.png" alt="Event 1" class="w-full h-48 object-cover">
             <div class="p-6">
-              <h3 class="text-2xl font-semibold mb-3">Orientation’25</h3>
+              <h3 class="text-2xl font-semibold mb-3">Ideathon</h3>
               <p class="text-gray-400 text-sm mb-4">
-                Kicking off the new tenure with 100+ enthusiastic attendees.
+                A 24-hour ideathon to brainstorm and pitch innovative solutions.
               </p>
-              <a href="events.html#orientation-details" 
+              <a href="events.html#ideathon-details" 
    class="text-purple-400 font-semibold hover:underline">
    Read More →
 </a>
@@ -329,26 +337,32 @@
           <!-- Event Card -->
           <div
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-            <img src="case-conq.png" alt="Event 2" class="w-full h-48 object-cover">
+            <img src="images/events/caseconq/caseconq1.jpg" alt="Event 2" class="w-full h-48 object-cover">
             <div class="p-6">
               <h3 class="text-2xl font-semibold mb-3">The Case Conqueror</h3>
               <p class="text-gray-400 text-sm mb-4">
                 Nationwide Case Study Challenge powered by Unstop.
               </p>
-              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+             <a href="events.html#ideathon-details" 
+   class="text-purple-400 font-semibold hover:underline">
+   Read More →
+</a>
             </div>
           </div>
 
           <!-- Event Card -->
           <div
             class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-            <img src="images/drishtiias/1000074424.jpg" alt="Event 3" class="w-full h-48 object-cover">
+            <img src="images/events/drishtiias/1000074424.jpg" alt="Event 3" class="w-full h-48 object-cover">
             <div class="p-6">
-              <h3 class="text-2xl font-semibold mb-3">Guest Lecture Series</h3>
+              <h3 class="text-2xl font-semibold mb-3">Drishti IAS</h3>
               <p class="text-gray-400 text-sm mb-4">
                 Inspiring sessions from startup founders and industry leaders sharing their journeys and insights.
               </p>
-              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+              <a href="events.html#ideathon-details" 
+   class="text-purple-400 font-semibold hover:underline">
+   Read More →
+</a>
             </div>
           </div>
         </div>
