--- a/events.html
+++ b/events.html
@@ -413,7 +413,7 @@
 
       <!-- Event 5 -->
       <div class="event-card" onclick="openModal('modal-gate')">
-        <img src="images/events/gate/gate2 .jpg" class="event-thumb" alt="Workshop: Cracking GATE with Made Easy">
+        <img src="images/events/gate/gate2.jpg" class="event-thumb" alt="Workshop: Cracking GATE with Made Easy">
         <div class="event-info">
           <h2>Workshop: Cracking GATE with Made Easy</h2>
           <p>Unlocking the Secrets of Success with Made Easy</p>
@@ -631,9 +631,9 @@
       <div id="gate-details" class="marquee-section"></div>
       <h2>GATE Preparation Workshop</h2>
       <div class="modal-images">
-        <img src="images/gate.png" alt="">
-        <img src="images/gate2.jpg" alt="">
-        <img src="images/gate1.jpg" alt="">
+        <img src="images/events/gate/gate1.jpg" alt="">
+        <img src="images/events/gate/gate3.jpg" alt="">
+        <img src="images/events/gate/gate2.jpg" alt="">
 
       </div>
     <p class="text-gray-400 mb-6">
@@ -673,9 +673,9 @@
       <div id="web3" class="marquee-section"></div>
       <h2>Web3 Workshop</h2>
       <div class="modal-images">
-        <img src="images/orientation.png" alt="">
-        <img src="images/orentation2.jpg" alt="">
-        <img src="images/orientation1.jpg" alt="">
+        <img src="images/events/web3/20241112_144531.jpg" alt="">
+        <img src="images/events/web3/web3.jpg" alt="">
+        <img src="images/events/web3/20241112_145123.jpg" alt="">
 
       </div>
     <p class="text-gray-400 mb-6">
