--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <p class="text-gray-400 text-sm mb-4">
                 Inspiring sessions from startup founders and industry leaders sharing their journeys and insights.
               </p>
-              <a href="events.html#ideathon-details" 
+              <a href="events.html#drishtiias-details" 
    class="text-purple-400 font-semibold hover:underline">
    Read More →
 </a>
