updated-updates section

--- a/updates.html
+++ b/updates.html
@@ -6,6 +6,7 @@
   <title>Updates - E-Cell IGDTUW</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" class="css">
   
 <style>
 /* Navbar container */
