Aligned About navbar, updated footer phone number, fixed responsive hamburger in Updates page

--- a/temp.html
+++ b/temp.html
@@ -234,7 +234,7 @@
           >Email:
           <a href="mailto:Ecell.igdtu@gmail.com">Ecell.igdtu@gmail.com</a></span
         >
-        | <span>Phone: <a href="tel:+919811911639">+91-98119 11639</a></span> |
+        | <span>Phone: <a href="tel:+919811911639">+919810823235</a></span> |
         <span>
           <a href="https://www.instagram.com/ecell.igdtuw/" target="_blank"
             >Instagram</a
