--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section class="hero">
         <!-- Background Video -->
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
-          <source src="video.mp4" type="video/mp4">
+          <source src="VIDEO-ECELL.mp4" type="video/mp4">
         </video>
         <!-- Gradient Background -->
         <div id="gradient-bg" class="absolute inset-0 z-0 transition-all duration-200"></div>
