--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             Our <span class="text-purple-400">Past Events</span>
           </h2>
           <p class="text-gray-400 text-lg md:text-xl max-w-2xl mx-auto">
-            From idea-stage hackathons to inspiring guest talks — our events bring together
+            From idea-stage hackathons to inspiring guest talks — a glimpse of our events that brings together
             innovators, creators, and entrepreneurs.
           </p>
         </div>
