--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>E-Cell - Events</title>
+  <link rel="icon" type="image/png" href="logo.jpeg">
   <!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -382,6 +383,15 @@
       </div>
 
       <!-- Event 2 -->
+      <div class="event-card" onclick="openModal('modal-founderswalk')">
+        <img src="images/events/founderswalk/founderswalk1.jpg" class="event-thumb" alt="Founders Walk Event">
+        <div class="event-info">
+          <h2>Founders Walk</h2>
+          <p>Networking with Visionaries: A Walk with Founders</p>
+        </div>
+      </div>
+
+      <!-- Event 3 -->
       <div class="event-card" onclick="openModal('modal-case')">
         <img src="images/events/caseconq/caseconq1.jpg" class="event-thumb" alt="Case Conqueror">
         <div class="event-info">
@@ -390,7 +400,7 @@
         </div>
       </div>
 
-      <!-- Event 3 -->
+      <!-- Event 4 -->
       <div class="event-card" onclick="openModal('modal-drishti')">
         <img src="drishti.png" class="event-thumb" alt="Drishti IAS Event">
         <div class="event-info">
@@ -399,7 +409,7 @@
         </div>
       </div>
 
-      <!-- Event 4 -->
+      <!-- Event 5 -->
       
       <div class="event-card" onclick="openModal('modal-orientation')">
         <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" class="event-thumb" alt="Orientation">
@@ -411,7 +421,7 @@
         </div>
       </div>
 
-      <!-- Event 5 -->
+      <!-- Event 6 -->
       <div class="event-card" onclick="openModal('modal-gate')">
         <img src="images/events/gate/gate2.jpg" class="event-thumb" alt="Workshop: Cracking GATE with Made Easy">
         <div class="event-info">
@@ -420,7 +430,7 @@
         </div>
       </div>
 
-      <!-- Event 6 -->
+      <!-- Event 7 -->
       <div class="event-card" onclick="openModal('modal-web3')">
         <img src="images/events/web3/web3.jpg" class="event-thumb" alt="Web3 Workshop">
         <div class="event-info">
@@ -429,8 +439,38 @@
         </div>
       </div>
 
+        <!-- Event 8 -->
+      <div class="event-card" onclick="openModal('modal-breakbars')">
+        <img src="images/events/breakbars1.jpg" class="event-thumb" alt="breakbars">
+        <div class="event-info">
+          <h2>Break The Bars</h2>
+          <p>Shattering Limitations: A Workshop on Overcoming Challenges</p>
+        </div>
+      </div>
+
+
+  <!-- Event 9 -->
+      <div class="event-card" onclick="openModal('modal-sharktank')">
+        <img src="images/events/sharktank1.jpg" class="event-thumb" alt="Shark Tank Event">
+        <div class="event-info">
+          <h2>Shark Tank - Workshop & Ideathon</h2>
+          <p>Pitch your ideas and get feedback from industry experts</p>
+        </div>
+      </div>
+
+  <!-- Event 10 -->
+      <div class="event-card" onclick="openModal('modal-arufa')">
+        <img src="images/events/arufa.jpg" class="event-thumb" alt="Arufa Research Internship Session">
+        <div class="event-info">
+          <h2>Arufa Research Internship Session</h2>
+          <p>Exploring Research Opportunities with Arufa</p>
+        </div>
+      </div>
+
+
     </div>
   </div>
+
 
   <!-- Modals (unchanged) -->
    
@@ -477,7 +517,67 @@
     </p>
         </div>
       </div>
-    <!-- event 2 modal -->
+
+
+      <!-- event 2 modal -->
+      <div id="modal-founderswalk" class="modal">
+        <div class="modal-content">
+          <span class="close-btn" onclick="closeModal('modal-founderswalk')">&times;</span>
+          <div id="founderswalk" class="marquee-section"></div>
+          <h2>Founders Walk</h2>
+          <div class="modal-images">
+            <img src="images/events/founderswalk/founderswalk1.jpg" alt="">
+            <img src="images/events/founderswalk/founderswalk2.jpg" alt="">
+            <img src="images/events/founderswalk/founderswalk3.jpg" alt="">
+
+          </div>
+        <p>
+    <p class="text-gray-400 mb-6">
+  E-Cell IGDTUW proudly hosted the immensely successful <strong>Founder’s Walk</strong> ✨ —  
+  an extraordinary gathering that brought together the energy, ambition, and wisdom of some of the  
+  most dynamic startup leaders in the ecosystem.  
+</p>
+
+<p class="text-gray-400 mb-6">
+  With great enthusiasm and pride, we welcomed <strong>30 extraordinary founders</strong> of startups,  
+  each of whom shared their awe-inspiring entrepreneurial journeys with our students. 🚀  
+  From the spark of an idea to the hurdles of execution, they spoke about perseverance, innovation,  
+  and the courage it took to build something impactful.  
+</p>
+
+<p class="text-gray-400 mb-6">
+  To make the occasion even more special, we had the distinct honor of receiving a  
+  <strong>distinguished chief guest</strong>, whose presence elevated the event and  
+  inspired the audience with valuable insights on leadership and entrepreneurship. 💡  
+</p>
+
+<p class="text-gray-400 mb-6">
+  The <strong>Founder’s Walk</strong> was more than just an event — it became a celebration of ideas,  
+  resilience, and community. Students engaged directly with the founders,  
+  asked questions, and learned from real-world experiences that no textbook could have captured. 🌟  
+</p>
+
+<p class="text-gray-300 mb-6">
+  📍 <strong>Venue:</strong> IGDTUW Campus
+</p>
+
+<p class="text-gray-400 mb-6">
+  This flagship event left a lasting impression on our student community, sparking fresh motivation  
+  to dream big and embrace the entrepreneurial spirit. 🌻  
+</p>
+
+<p class="text-gray-400 mb-6">
+  Participants stayed connected with us on Instagram for more glimpses and updates:  
+  👉 <a href="https://www.instagram.com/reel/CuzdzrQgMra/?utm_source=ig_web_copy_link&igsh=MWF4Mnh5bTM5MHBhbg==" 
+  target="_blank" class="text-pink-400 hover:underline">Watch Highlights</a>  
+</p>
+
+    </p>
+        </div>
+      </div>
+
+
+    <!-- event 3 modal -->
       <div id="modal-case" class="modal">
         <div class="modal-content">
           <span class="close-btn" onclick="closeModal('modal-case')">&times;</span>
@@ -527,7 +627,7 @@
         </div>
       </div>
 
-    <!-- event 3 modal -->
+    <!-- event 4 modal -->
       <div id="modal-drishti" class="modal">
         <div class="modal-content">
           <span class="close-btn" onclick="closeModal('modal-drishti')">&times;</span>
@@ -567,7 +667,7 @@
       </div>
 
 
-      <!-- event 4 modal -->
+      <!-- event 5 modal -->
       <div id="modal-orientation" class="modal">
         <div class="modal-content">
           <span class="close-btn" onclick="closeModal('modal-orientation')">&times;</span>
@@ -624,7 +724,7 @@
       </div>
 
 
-  <!-- event 5 modal -->
+  <!-- event 6 modal -->
   <div id="modal-gate" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('modal-gate')">&times;</span>
@@ -653,6 +753,9 @@
   This was a <strong>must-attend event</strong> for all B.Tech students of IGDTUW aiming to perform their best in GATE and other competitive exams.  
   Beyond strategies, the session also provided students with motivational takeaways and real-life success stories, making it more relatable and inspiring.  
   Those who attended gained not just knowledge, but also a fresh perspective and the self-belief needed to face upcoming challenges.  
+</br>
+  Have a glimpse of how the event went through this link:  
+  <a href="https://www.instagram.com/reel/C1rUV_kSHHK/?utm_source=ig_web_copy_link&igsh=MWlhOXFvZWIyOXgwag==" target="_blank">https://www.instagram.com/reel/C1rUV_kSHHK/?utm_source=ig_web_copy_link&igsh=MWlhOXFvZWIyOXgwag==</a> ✨
 </p>
 
 
@@ -666,7 +769,7 @@
   </div>
 
 
-<!-- event 6 modal -->
+<!-- event 7 modal -->
   <div id="modal-web3" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('modal-web3')">&times;</span>
@@ -716,6 +819,163 @@
 
     </div>
   </div>
+
+  <!-- event 8 modal -->
+  <div id="modal-breakbars" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('modal-breakbars')">&times;</span>
+      <div id="breakbars" class="marquee-section"></div>
+      <h2>Break the Bars</h2>
+      <div class="modal-images">
+        <img src="images/events/breakbars2.jpg" alt="">
+        <img src="images/events/breakbars1.jpg" alt="">
+        <img src="images/events/breakbars3.jpg" alt="">
+
+      </div>
+    <p class="text-gray-400 mb-6">
+  At E-Cell IGDTUW, we proudly showcased the innovative startups incubated by the <strong>Anveshan Foundation</strong>.  
+  Among these promising ventures, one initiative stood out for its unique approach to tackling one of the most important challenges of our time —  
+  <strong>mental health and career well-being</strong>. 💡✨  
+</p>
+
+<p class="text-gray-400 mb-6">
+  The event titled <strong>“Break the Bars”</strong> introduced students to <strong>Hope: helping in every step</strong>,  
+  a modern platform that was committed to breaking the stigma around mental health in India.  
+  With a dedicated team of <strong>60 expert psychologists</strong>, Hope empowered students and professionals alike  
+  to achieve their full potential, balance their mental well-being, and reach their career goals. 🌿  
+</p>
+
+<p class="text-gray-400 mb-6">
+  What made Hope revolutionary was its accessibility and inclusivity.  
+  With the vision of making mental health care and career development both <strong>affordable</strong> and <strong>approachable</strong>,  
+  Hope provided:  
+</p>
+
+<ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
+  <li>🔷 Flexible online consultations available from anywhere in the world.</li>
+  <li>🔷 Campus-to-corporate training programs designed to prepare students for real-world challenges.</li>
+  <li>🔷 Workplace training programs that ensured continuous professional growth and emotional resilience.</li>
+</ul>
+
+<p class="text-gray-400 mb-6">
+  The session was more than just an introduction to a startup — it was a <strong>call to action</strong>.  
+  Students were encouraged to come forward, embrace conversations about mental health, and take the first step  
+  toward a healthier, brighter future. 🌞  
+</p>
+
+<p class="text-gray-400 mb-6">
+  This inspiring initiative highlighted how entrepreneurship could address not just technological and business challenges,  
+  but also deeply personal issues that affected millions of lives.  
+  By bridging mental health with career growth, <strong>Hope</strong> truly set an example of impactful innovation  
+  nurtured under the Anveshan Foundation.  
+</p>
+
+<p class="text-gray-400 mb-6">
+  Students stayed tuned with us and followed our journey on Instagram for more updates about groundbreaking startups like Hope.  
+  👉 <a href="https://www.instagram.com/p/Cqxk74VSQgp/?utm_source=ig_web_copy_link&igsh=ZnB4MDVxcmtjemNz" 
+  target="_blank" class="text-pink-400 hover:underline">View Post</a>  
+</p>
+
+    </div>
+  </div>
+
+  <!-- event 9 modal -->
+  <div id="modal-sharktank" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('modal-sharktank')">&times;</span>
+      <div id="sharktank" class="marquee-section"></div>
+      <h2>Shark Tank - Workshop & Ideathon</h2>
+      <div class="modal-images">
+        <img src="images/events/sharktank2.jpg" alt="">
+        <img src="images/events/sharktank1.jpg" alt="">
+        <img src="images/events/sharktank3.jpg" alt="">
+
+      </div>
+    <p class="text-gray-400 mb-6">
+  <strong>Relive the Entrepreneurship Workshop & Ideathon – SHARK TANK 🦈🚀</strong>  
+  An inspiring event where budding entrepreneurs showcased their innovative startup ideas  
+  and gained valuable insights from industry experts. The <strong>Adira team of CSD</strong>  
+  along with the <strong>E-Cell team</strong> proudly conducted this event, taking the opportunity  
+  to new heights with inquisitive ideas and an unmatched passion for entrepreneurship.  
+</p>
+
+<p class="text-gray-400 mb-6">
+  The workshop turned out to be a <strong>fruitful success</strong>, filled with energy, innovation,  
+  and collaboration. Zealous participants presented unique business models,  
+  pitched confidently before the panel, and learned how to refine their ideas into  
+  impactful ventures. 🌟🌐  
+</p>
+
+<p class="text-gray-400 mb-6">
+  On <strong>27th July</strong>, the event brought together a community of dreamers and doers who  
+  embraced the entrepreneurial spirit. Students not only showcased their creativity  
+  but also discovered strategies to tackle challenges, gain mentorship, and  
+  turn aspirations into reality. 💡🚀  
+</p>
+
+<p class="text-gray-300 mb-6">
+  📅 <strong>Date:</strong> 27th July, 2025 <br>
+  📍 <strong>Venue:</strong> IGDTUW Campus
+</p>
+
+<p class="text-gray-400 mb-6">
+  Catch a glimpse of the exciting pitches, insightful strategies, and the vibrant spirit  
+  of entrepreneurship through our highlights:  
+  👉 <a href="https://www.instagram.com/reel/CvUB-s3OmJr/?utm_source=ig_web_copy_link&igsh=MWpsNGZ5anR6M2w5Ng==" 
+  target="_blank" class="text-pink-400 hover:underline">Watch Highlights</a>  
+</p>
+
+
+
+
+    </div>
+  </div>
+
+
+  <!-- event 10 modal -->
+  <div id="modal-arufa" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('modal-arufa')">&times;</span>
+      <div id="arufa" class="marquee-section"></div>
+      <h2>Arufa Research Internship Session</h2>
+      <div class="modal-images">
+        <img src="images/events/web3/20241112_144531.jpg" alt="">
+        <img src="images/events/arufa.jpg" alt="">
+        <img src="images/events/arufa2.jpg" alt="">
+
+      </div>
+    <p class="text-gray-400 mb-6">
+  🌐 <strong>Internship Series Kickoff with Arufa Research! 🚀</strong>  
+  We proudly launched our internship series with <strong>Arufa Research</strong>, pioneers in developing  
+  next-generation blockchain products. The session provided participants with invaluable  
+  insights into the evolving world of blockchain technology, guided by the experts at Arufa. 📈  
+</p>
+
+<p class="text-gray-400 mb-6">
+  Students had the unique opportunity to explore how Arufa Research is shaping the future of  
+  blockchain through innovation and real-world applications. They discovered how this  
+  internship program could open doors to career advancement and equip them with essential  
+  industry skills. 💡📤  
+</p>
+
+<p class="text-gray-400 mb-6">
+  Beyond technical excellence, attendees also learned about the company’s enriching culture:  
+  <br> 🔹 <strong>Professional Development:</strong> Workshops and growth opportunities for continuous learning.  
+  <br> 🔹 <strong>Milestone Celebrations:</strong> Acknowledging and appreciating employee dedication.  
+  <br> 🔹 <strong>State-of-the-Art Facilities:</strong> Modern infrastructure and high-speed internet for seamless productivity.  
+  <br> 🔹 <strong>Collaborative Spaces:</strong> Dedicated areas designed to foster teamwork and innovation.  
+</p>
+
+<p class="text-gray-300 mb-6">
+  📅 <strong>Date:</strong> 27th May, 2023 <br>
+  🕔 <strong>Time:</strong> 5:30 PM <br>
+</p>
+
+
+    </div>
+  </div>
+
+  
 
   <script>
     function openModal(id) {
