--- a/our-team.html
+++ b/our-team.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <!-- <title>Our Team • E-Cell IGDTUW</title> -->
+     <link rel="icon" type="image/png" href="logo.jpeg">
 
   <!-- Google Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
