--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
     <main id="home">
       <section class="hero">
         <!-- Background Video -->
-        <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
-          <source src="VIDEO-ECELL.mp4" type="video/mp4">
+        <video id="heroVideo" muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
+        <source src="VIDEO-ECELL.mp4" type="video/mp4">
         </video>
+
         <!-- Gradient Background -->
         <div id="gradient-bg" class="absolute inset-0 z-0 transition-all duration-200"></div>
         <!-- Gradient Overlay -->
