--- a/index.html
+++ b/index.html
@@ -303,6 +303,53 @@
   </div>
 </div>
 
+<!-- Mobile Sponsors Section -->
+<section class="sponsors-section mobile-only">
+
+  <div class="mobile-sponsor-rows">
+   <!-- Row 1 -->
+  <div class="mobile-row row1">
+    <div class="mobile-row-inner">
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+      <!-- Repeat for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+    </div>
+  </div>
+
+  <!-- Row 2 -->
+  <div class="mobile-row row2">
+    <div class="mobile-row-inner">
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+      <!-- Repeat for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+    </div>
+  </div>
+
+  <!-- Row 3 -->
+  <div class="mobile-row row3">
+    <div class="mobile-row-inner">
+      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+      <!-- Repeat for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+    </div>
+  </div>
+  </div>
+</section>
+
+
+
     <!-- Events Section -->
     <section id="events" class="relative py-20 bg-[#111] text-white overflow-hidden">
       <div class="max-w-7xl mx-auto px-6 lg:px-12">
